# fixed_point

./: CMakeLists.txt  LICENSE
include/: CMakeLists.txt  arithmetic.hpp  bitwise.hpp  comparison.hpp  fixed_point  fixed_point.hpp  logical.hpp  make_fixed_point.hpp  math.hpp  operation.hpp  type_traits.hpp
test/: CMakeLists.txt  pch.h  test_arithmetic.cpp  test_bitwise.cpp  test_cast.cpp  test_comparison.cpp  test_construct.cpp  test_logical.cpp  test_math.cpp
